--- a/project.properties
+++ b/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-14
-android.library.reference.1=../../git/Android-ViewPagerIndicator/library
+target=android-15
+android.library.reference.1=../ViewPagerIndicator/library
